testing/tests/ui/filter-recursion.stderr
error: your template code is too deeply nested, or the last expression is too complex
 --> testing/templates/filter-recursion.html:1:277
       "|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A||A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A"...
 --> tests/ui/filter-recursion.rs:4:3
  |
4 | #[template(path = "filter-recursion.html")]
  |   ^^^^^^^^
